--- a/report_lambda/requirements.txt
+++ b/report_lambda/requirements.txt
@@ -1,5 +1,6 @@
 boto3==1.24.91 ; python_version >= "3.9" and python_version < "4.0"
 botocore==1.27.91 ; python_version >= "3.9" and python_version < "4.0"
+fsspec==2022.8.2 ; python_version >= "3.9" and python_version < "4.0"
 greenlet==1.1.3.post0 ; python_version >= "3.9" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32") and python_version < "4.0"
 jmespath==1.0.1 ; python_version >= "3.9" and python_version < "4.0"
 numpy==1.23.4 ; python_version >= "3.9" and python_version < "4.0"
