--- a/report_lambda/pyproject.toml
+++ b/report_lambda/pyproject.toml
@@ -7,11 +7,12 @@ readme = "README.md"
 packages = [{include = "report_lambda"}]
 
 [tool.poetry.dependencies]
-python = "^3.9"
-boto3 = "^1.24.91"
-pandasql = "^0.7.3"
+python = "3.9.10"
+s3fs = "^2022.8.2"
 pandas = "^1.5.0"
+numpy = "^1.23.4"
 fsspec = "^2022.8.2"
+pandasql = "^0.7.3"
 
 
 [build-system]
