--- a/report_lambda/requirements.txt
+++ b/report_lambda/requirements.txt
@@ -1,14 +1,26 @@
-boto3==1.24.91 ; python_version >= "3.9" and python_version < "4.0"
-botocore==1.27.91 ; python_version >= "3.9" and python_version < "4.0"
-fsspec==2022.8.2 ; python_version >= "3.9" and python_version < "4.0"
-greenlet==1.1.3.post0 ; python_version >= "3.9" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32") and python_version < "4.0"
-jmespath==1.0.1 ; python_version >= "3.9" and python_version < "4.0"
-numpy==1.23.4 ; python_version >= "3.9" and python_version < "4.0"
-pandas==1.5.0 ; python_version >= "3.9" and python_version < "4.0"
-pandasql==0.7.3 ; python_version >= "3.9" and python_version < "4.0"
-python-dateutil==2.8.2 ; python_version >= "3.9" and python_version < "4.0"
-pytz==2022.4 ; python_version >= "3.9" and python_version < "4.0"
-s3transfer==0.6.0 ; python_version >= "3.9" and python_version < "4.0"
-six==1.16.0 ; python_version >= "3.9" and python_version < "4.0"
-sqlalchemy==1.4.41 ; python_version >= "3.9" and python_version < "4.0"
-urllib3==1.26.12 ; python_version >= "3.9" and python_version < "4"
+aiobotocore==2.4.0 ; python_full_version == "3.9.10"
+aiohttp==3.8.3 ; python_full_version == "3.9.10"
+aioitertools==0.11.0 ; python_full_version == "3.9.10"
+aiosignal==1.2.0 ; python_full_version == "3.9.10"
+async-timeout==4.0.2 ; python_full_version == "3.9.10"
+attrs==22.1.0 ; python_full_version == "3.9.10"
+botocore==1.27.59 ; python_full_version == "3.9.10"
+charset-normalizer==2.1.1 ; python_full_version == "3.9.10"
+frozenlist==1.3.1 ; python_full_version == "3.9.10"
+fsspec==2022.8.2 ; python_full_version == "3.9.10"
+greenlet==1.1.3.post0 ; python_full_version == "3.9.10" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32")
+idna==3.4 ; python_full_version == "3.9.10"
+jmespath==1.0.1 ; python_full_version == "3.9.10"
+multidict==6.0.2 ; python_full_version == "3.9.10"
+numpy==1.23.4 ; python_full_version == "3.9.10"
+pandas==1.5.0 ; python_full_version == "3.9.10"
+pandasql==0.7.3 ; python_full_version == "3.9.10"
+python-dateutil==2.8.2 ; python_full_version == "3.9.10"
+pytz==2022.4 ; python_full_version == "3.9.10"
+s3fs==2022.8.2 ; python_full_version == "3.9.10"
+six==1.16.0 ; python_full_version == "3.9.10"
+sqlalchemy==1.4.41 ; python_full_version == "3.9.10"
+typing-extensions==4.4.0 ; python_full_version == "3.9.10"
+urllib3==1.26.12 ; python_full_version == "3.9.10"
+wrapt==1.14.1 ; python_full_version == "3.9.10"
+yarl==1.8.1 ; python_full_version == "3.9.10"
